Client/Content/app.css
/* ... */
   .project-area .button-group button + button {
    padding-left: 2rem;
  }

    .our-project .title h4 {
    font-size: 20px;
  }

  .our-project .title a {
    text-decoration: none;
  }

  .grid .our-project .img a:hover img{
    filter: brightness(0.9) drop-shadow(1px 8px 30px #000000);
  }

.hr-projects {
  padding-top: 1rem;
}

   /* End Projects */

   /* Start Carousel */

   .carousel {
     background: #212121;
   }

   .owl-carousel .owl-dots .owl-dot span {
    width: 12px;
    height: 12px;
   }

   .owl-carousel .owl-dots .owl-dot.active span {
    background: rgb(158, 0, 0);
    width: 12px;
    height: 12px;
   }

   /* End Carousel */

   /* Start Projects Carousel */

   .carousel-projects {
    margin-top: 2%;
   }

   /* End Projects Carousel */

   /* Start off-canvas */

   .offcanvas {
    background: #212121;
   }

   .btn-close {
     color: rgb(158, 0, 0);
   }

   .offcanvas-body {
     padding-top: 60%;
   }

   .offcanvas-btn {
    padding-right: 3%;
   }

    /* End off-canvas */

    /* Start Contact */

   .contact-title {
     margin-left: 20%;
     margin-top: 10%;
     margin-bottom: -2%;
   }

    .contact-section {
      background: rgba(33, 33, 33);
      max-width: 800px;
      margin: 0 auto;
      position: relative;
      box-shadow: 0 10px 30px 0px rgba(0, 0, 0, 0.1);
      padding: 30px;
      border-radius: 8px;
    }

    .contact-section .contact-title{
      text-align: center;
      letter-spacing: 3px;
      font-size: 3em;
      line-height: 48px;
      padding-bottom: 20px;
      color: #ffffff;
    }

    .contact-form .form-field {
      position: relative;
      margin: 32px 0;
    }

    .contact-form .input-text {
      background: rgba(33, 33, 33);
      display: block;
      width: 100%;
      height: 36px;
      border-width: 0 0 2px 0;
      border-color: #ffffff;
      font-size: 18px;
      line-height: 26px;
      color: white;
    }

    .contact-form .input-text:not([value=""]) + .label ,.contact-form .input-text:focus + .label {
      transform: translateY(-24px);
  }

    .contact-form .input-text:focus {
      outline: none;
      background: rgba(33, 33, 33);
    }

    .contact-form .label {
      position: absolute;
      left: 20px;
      bottom: 11px;
      font-size: 18px;
      line-height: 26px;
      font-weight: 400;
      color: white;
      cursor: text;
      transition: transform 0.2s ease-in-out;
    }

    .contact-form .submit-btn {
      display: inline-block;
      color: black;
      text-transform: uppercase;
      letter-spacing: 2px;
      font-size: 16px;
      padding: 8px 16px;
      border: none;
      width: 200px;
      cursor: url("/Assets/images/cursor2.png"), auto;
    }

    .contact-form .submit-btn:hover {
      background: rgb(158, 0, 0);
    }

    /* End Contact */

    /* Start contact-list table */
    .table {
      background-color: #212121;
      border-radius: 8px;
      border-color: #3a3a3a;
    }

    td, th{
      color: white;
    }
    
    tr {
      padding-top: 4px;
    }
    .editContactBtn, .deleteContactBtn {
      margin-bottom: 4px;
    }

    .contacts-list{
      padding-top: 7%;
    }

    .topBackgroundAlt {
      background-image: url('/Assets/images/background2.png');
      background-repeat: repeat-x repeat-y;
      height: 100vh;
      margin-top: -5%;
      padding-top: 5%;
    }
    /* End contact-list table */

    /* Start login area */

    .login {
      background-color: #212121;
      padding: 45px;
      padding-top: 5%;
      margin-top: 10%;
      padding-bottom: 7%;
      box-shadow: 0px 10px 30px #0e0e0e;
      border-radius: 8px;
    }

    .btn-dark {
      background-color: black;
    }

    .btn-dark:hover {
      background-color: rgb(26, 26, 26);
    }

    .topBackground {
      background-image: url('/Assets/images/loginbg.png');
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
      height: 100vh;
      margin-top: -5%;
      padding-top: 3%;
    }

    .logintxt {
      padding-top: 10%;
      padding-left: 34%;
      margin-bottom: -3%;
    }

    .loginIcon {
      padding-bottom: 10%;
      color: white;
    }

    .form-control {
      border-radius: 30px;
    }


    /* End login area /

    /* Start Registration area */

    .form-control{
      background-color:rgba(37, 37, 37, 0.9);
      color: white;
      border: 2px solid rgb(194, 194, 194);
    }

    input[type=text]:focus, input[type=password]:focus, input[type=email]:focus{
      background-color:rgba(37, 37, 37, 0.9);
      color: white;
      outline: none;
    }

    .register {
      background-color: #212121;
      padding: 45px;
      margin-top: 8%;
      padding-bottom: 40px;
      border-radius: 8px;
      box-shadow: 0px 10px 30px #0e0e0e;
    }

    .logintxt-registration {
      padding-top: 10%;
      padding-left: 28%;
      margin-bottom: -3%;
    }

    /* End Registration area */

    /* Start Add Contact Page */

    .addContactTxt {
      padding-top: 10%;
      margin-bottom: -10%;
    }

    /* End Add Contact Page */

    /* Start Update Contact Page */

    .updateContactTxt {
      padding-top: 10%;
      margin-bottom: -4%;
    }

    .input-group-text {
      background-color: #181818;
      color: white;
    }

    /* End Update Contact Page */
    

